--- a/assets/css/components/_portfolio.scss
+++ b/assets/css/components/_portfolio.scss
@@ -39,6 +39,7 @@
         font-family: "Noto Sans Korean", sans-serif;
 
         h3 {
+          color: white;
           margin: 0.75rem 0;
         }
 
